# Tien-Len

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  README.md  ROADMAP.md  Run_pygamegui.bat  build_exe.sh  click_demo.py  conftest.py  gui.py  main.py  pygame_gui.py  pyproject.toml  pytest.ini  requirements.md  requirements.txt  requirements_dev.txt  settings_dialog.py  sound.py  test_parse_input.py  tien_len_full.py  tien_len_updated_roadmap.md  tooltip.py  views.py
.github/workflows/: ci.yml
assets/: README.md
assets/avatars/: README.md
docs/: AI_PERSONALITY_STRATEGY.md  RELEASE_CHECKLIST.md
examples/: cli_demo.py  gui_demo.py
pygame_gui/: __init__.py  anim_manager.py  animations.py  helpers.py  overlays.py  tween.py  view.py
src/tienlen/: __init__.py  cli.py  game.py  rules.py  sound.py
src/tienlen_gui/: animations.py  app.py  easing.py  helpers.py  hud.py  overlay_manager.py  overlays.py  tween.py  view.py
src/tienlen_gui/assets/: __init__.py
tests/: test_ai_features.py  test_ai_rotation.py  test_ai_settings.py  test_cli_flags.py  test_cli_input.py  test_clone.py  test_event_loop.py  test_expert_ai.py  test_extra.py  test_fan_layout.py  test_get_font.py  test_gui_animations.py  test_gui_features.py  test_gui_hud.py  test_gui_input.py  test_gui_on_resize.py  test_gui_overlays.py  test_gui_snapshots.py  test_hint.py  test_json_serialization.py  test_main.py  test_memory_usage.py  test_parse_input.py  test_performance.py  test_personality_volume.py  test_player_pos.py  test_pygame_gui.py  test_round_summary.py  test_rules.py  test_score_move.py  test_simulated_game.py  test_sound.py  test_timeline.py  test_tooltip.py  test_tween.py  test_undo.py  test_views.py
tienlen_gui/: __init__.py  animations.py  helpers.py  hud.py  overlay_manager.py  overlays.py  tween.py  view.py
