[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tien-len"
version = "0.1.0"
description = "Tiến Lên card game with CLI and Pygame GUI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pillow", "pygame-ce"]

[project.gui-scripts]
tien-len = "pygame_gui:main"

[project.scripts]
tien-len-cli = "tien_len_full:main"

[tool.setuptools]
py-modules = [
    "tien_len_full",
    "sound",
    "pygame_gui",
]
packages = [
    "assets",
]
include-package-data = true

[tool.setuptools.package-data]
assets = ["**/*"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = ["tests/*"]


