[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tien-len"
version = "0.1.0"
description = "Tiến Lên card game with CLI and Pygame GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10,<12",
    "pygame-ce>=2.5,<3",
    "pytest>=8,<9",
    "coverage>=7,<8",
]

[project.gui-scripts]
tien-len = "tienlen_gui:main"

[project.scripts]
tien-len-cli = "tien_len_full:main"

[tool.setuptools]
py-modules = [
    "tien_len_full",
    "sound",
]
packages = [
    "assets",
    "tienlen_gui",
]
include-package-data = true

[tool.setuptools.package-data]
assets = ["**/*"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]


