[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tien-len"
version = "0.1.0"
description = "Tiến Lên card game with CLI and Pygame GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10,<12",
    "pygame-ce>=2.5,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "coverage>=7,<8",
]
dev = [
    "pre-commit>=3,<4",
    "black>=24,<25",
    "isort>=5,<6",
    "flake8>=6,<7",
    "mypy>=1,<2",
]


[project.scripts]
tien-len = "tienlen.cli:main"

[project.gui-scripts]
tien-len-gui = "tienlen_gui.app:main"

[tool.setuptools]
packages = {find = {where = ["src"]}}
include-package-data = true

[tool.setuptools.package-data]
tienlen_gui = ["assets/**/*"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
branch = true
omit = ["tienlen_gui/*.py"]

[tool.mypy]
ignore_missing_imports = true


